hello-world/dev-nginx-ingress-controller-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  selector:
    matchLabels:
      app: dev-nginx-ingress-lb
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: dev-nginx-ingress-lb
    spec:
      terminationGracePeriodSeconds: 60
      serviceAccount: dev-nginx
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.29.0
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-ingress-controller-conf
            - --v=2
          ports:
            - containerPort: 80
