hello-world/dev-default-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-backend
spec:
  selector:
    matchLabels:
      app: dev-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: dev-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: dev-backend
        image: 10.129.178.173:5006/infra/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dev-backend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dev-backend
