hello-world/dev-nginx-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-nginx-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30006
      name: http
  selector:
    app: dev-nginx-ingress-lb
