hello-world/dev-hello-world-backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dev-hello-world-backend.com.br
    http:
      paths:
      - path: /hwbff
        backend:
          serviceName: hello-world-backend
          servicePort: 3040
