hello-world/dev-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dev-helloworld.com.br
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld
          servicePort: 3040
